# trading-autoresearch

./: .env.example  .gitignore  AUTORESEARCH_POLICY.md  LICENSE  README.md  autoresearch_driver.py  baselines.py  evaluator.py  experiment.py  prepare.py  program.md  pyproject.toml  refresh_data.py  results.tsv
iterations/: README.md  iter_001_8988cee.md  iter_002_6e143de.md  iter_042_8988cee.md  iter_047_37994af.md  iter_047_6e143de.md  iter_048_37994af.md  iter_048_e9a95a5.md  iter_049_29c9eaf.md  iter_049_e9a95a5.md  iter_050_29c9eaf.md  iter_050_2f8bd0b.md  iter_051_09119c6.md  iter_051_2f8bd0b.md  iter_053_e243765.md  iter_054_91b0b60.md  iter_055_56c1960.md  iter_056_2ce550f.md  iter_057_2d9ea93.md  iter_058_0307051.md  iter_059_b20af41.md  iter_060_8cad106.md  iter_061_7db4e02.md  iter_062_6fb35d3.md  iter_063_2c0ab38.md  iter_064_e3199bb.md  iter_065_c091321.md  iter_066_06076ef.md  iter_067_5467e68.md  iter_068_e94504e.md  iter_069_4ec6ecb.md  iter_070_fa4ab20.md  iter_071_beaa5e6.md  iter_072_0f45fb6.md  iter_073_081c441.md  iter_074_a3228fc.md  iter_075_4d02b79.md  iter_076_47ba680.md  iter_077_6655f5e.md  iter_078_e50ee1b.md  (+102 more)
scripts/: chart_training_loss.py
