[project]
name = "trading-autoresearch"
version = "0.1.0"
description = "Karpathy-style autoresearch harness for an intraday trading transformer + RL policy"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "alpaca-py>=0.30",        # 5+ years of 1-min IEX bars (free tier)
    "python-dotenv>=1.0",
    "yfinance>=0.2.40",       # fallback for symbols not on Alpaca (e.g. ^VIX index)
    "matplotlib>=3.8",
    "typer>=0.12",
]

[tool.setuptools]
py-modules = ["prepare", "experiment", "evaluator"]
